<resources>
    <string name="app_name">ExpressPackage</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="remember_login_and_password">Remember login and password</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="re_password">Re-Password</string>
    <string name="register">Register</string>
    <string name="you_must_add_all_information">You must add all information</string>
    <string name="next_point">Next Point</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="number_house">Number House</string>
    <string name="number_local">Number Local</string>
    <string name="textnameconfirmation" translatable="false">TextNameConfirmation</string>
    <string name="name_who_confirmation">Name Who Confirmation</string>
    <string name="if_you_can_t_account">If You don\'t have account,</string>
    <string name="click_here">click here!</string>
    <string name="you_must_add_all_informations_and_accept_regulations">You must add all informations and accept regulations</string>
    <string name="accept">Accept</string>
    <string name="regulations">Regulations</string>
    <string name="confrimation_order">Confrimation Order</string>
    <string name="i_can_order_pack">I have order pack</string>
    <string name="i_can_write_number_order">I can write number order</string>
    <string name="i_can_run_qr_scanner">I can run QR Scanner</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="no_order_pack">No Order Pack</string>
    <string name="order_pack">Order Pack</string>
    <string name="we_send_e_mail_to">We send e-mail to:</string>
    <string name="save_adress">Save Address</string>
    <string name="repeat_send_e_mail">Repeat send e-mail</string>
    <string name="you_go_to_your_mail_and_confirmation">You go to your mail and confirmation registration</string>
    <string name="regulations_express_package_account">Regulations Express Package Account</string>
    <string name="_1" translatable="false">1.</string>
    <string name="accept_regulations">Accept Regulations</string>
    <string name="size">Size</string>
    <string name="small">Small</string>
    <string name="big">Big</string>
    <string name="driver">Driver</string>
    <string name="standard">Standard</string>
    <string name="payment">Payment</string>
    <string name="confirmation">Confirmation</string>
    <string name="location_driver">Location Driver</string>
    <string name="licensed">Licensed</string>
    <string name="no_signature">No Signature</string>
    <string name="electronic_signature">Electronic Signature</string>
    <string name="qr_code_signature">QR Code Signature</string>
    <string name="sender">Sender</string>
    <string name="receiver">Receiver</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="next">Next</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="show_summary">Show Summary</string>
    <string name="number_who_confirmation">Phone number Who Confirmation</string>
    <string name="No_Order_Pack">No Order Pack: </string>
    <string name="login_button">Login</string>
    <string name="size_">Size:</string>
    <string name="driver_">Driver:</string>
    <string name="payment_">Payment:</string>
    <string name="confirmation_">Confirmation:</string>
    <string name="location_driver_">Location Driver:</string>
    <string name="posting_adress_">Posting Address:</string>
    <string name="pickup_adress_">Pickup Address:</string>
    <string name="cancel">Cancel</string>
    <string name="order">Order</string>
    <string name="who_pickup">Who Pickup:</string>
</resources>
