<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmOrderActivity">

    <TextView
        android:id="@+id/textViewCanWriteNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/i_can_write_number_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNoNumberPack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCanWriteNumber"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewRunQRScanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/i_can_run_qr_scanner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNoNumberPack" />

    <Button
        android:id="@+id/buttonQRScanner"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/qr_scanner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRunQRScanner" />

    <Button
        android:id="@+id/buttonOrderPack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_pack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewNoOrderPack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_order_pack"
        app:layout_constraintBottom_toTopOf="@+id/buttonOrderPack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewWaitToServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="..."
        app:layout_constraintBottom_toTopOf="@+id/buttonOrderPack"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>